docs/crossplane/1.18/pkg/v1beta1/imageConfig.md
---
permalink: /crossplane/1.18/pkg/v1beta1/imageConfig/
---

# pkg.v1beta1.imageConfig

"The ImageConfig resource is used to configure settings for package images."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withMatchImages(matchImages)`](#fn-specwithmatchimages)
  * [`fn withMatchImagesMixin(matchImages)`](#fn-specwithmatchimagesmixin)
  * [`obj spec.matchImages`](#obj-specmatchimages)
    * [`fn withPrefix(prefix)`](#fn-specmatchimageswithprefix)
    * [`fn withType(type)`](#fn-specmatchimageswithtype)
  * [`obj spec.registry`](#obj-specregistry)
    * [`obj spec.registry.authentication`](#obj-specregistryauthentication)
      * [`obj spec.registry.authentication.pullSecretRef`](#obj-specregistryauthenticationpullsecretref)
        * [`fn withName(name)`](#fn-specregistryauthenticationpullsecretrefwithname)
  * [`obj spec.verification`](#obj-specverification)
    * [`fn withProvider(provider)`](#fn-specverificationwithprovider)
    * [`obj spec.verification.cosign`](#obj-specverificationcosign)
      * [`fn withAuthorities(authorities)`](#fn-specverificationcosignwithauthorities)
      * [`fn withAuthoritiesMixin(authorities)`](#fn-specverificationcosignwithauthoritiesmixin)
      * [`obj spec.verification.cosign.authorities`](#obj-specverificationcosignauthorities)
        * [`fn withAttestations(attestations)`](#fn-specverificationcosignauthoritieswithattestations)
        * [`fn withAttestationsMixin(attestations)`](#fn-specverificationcosignauthoritieswithattestationsmixin)
        * [`fn withName(name)`](#fn-specverificationcosignauthoritieswithname)
        * [`obj spec.verification.cosign.authorities.attestations`](#obj-specverificationcosignauthoritiesattestations)
          * [`fn withName(name)`](#fn-specverificationcosignauthoritiesattestationswithname)
          * [`fn withPredicateType(predicateType)`](#fn-specverificationcosignauthoritiesattestationswithpredicatetype)
        * [`obj spec.verification.cosign.authorities.key`](#obj-specverificationcosignauthoritieskey)
          * [`fn withHashAlgorithm(hashAlgorithm)`](#fn-specverificationcosignauthoritieskeywithhashalgorithm)
          * [`obj spec.verification.cosign.authorities.key.secretRef`](#obj-specverificationcosignauthoritieskeysecretref)
            * [`fn withKey(key)`](#fn-specverificationcosignauthoritieskeysecretrefwithkey)
            * [`fn withName(name)`](#fn-specverificationcosignauthoritieskeysecretrefwithname)
        * [`obj spec.verification.cosign.authorities.keyless`](#obj-specverificationcosignauthoritieskeyless)
          * [`fn withIdentities(identities)`](#fn-specverificationcosignauthoritieskeylesswithidentities)
          * [`fn withIdentitiesMixin(identities)`](#fn-specverificationcosignauthoritieskeylesswithidentitiesmixin)
          * [`fn withInsecureIgnoreSCT(insecureIgnoreSCT)`](#fn-specverificationcosignauthoritieskeylesswithinsecureignoresct)
          * [`obj spec.verification.cosign.authorities.keyless.identities`](#obj-specverificationcosignauthoritieskeylessidentities)
            * [`fn withIssuer(issuer)`](#fn-specverificationcosignauthoritieskeylessidentitieswithissuer)
            * [`fn withIssuerRegExp(issuerRegExp)`](#fn-specverificationcosignauthoritieskeylessidentitieswithissuerregexp)
            * [`fn withSubject(subject)`](#fn-specverificationcosignauthoritieskeylessidentitieswithsubject)
            * [`fn withSubjectRegExp(subjectRegExp)`](#fn-specverificationcosignauthoritieskeylessidentitieswithsubjectregexp)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of ImageConfig

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"ImageConfigSpec contains the configuration for matching images."

### fn spec.withMatchImages

```ts
withMatchImages(matchImages)
```

"MatchImages is a list of image matching rules that should be satisfied."

### fn spec.withMatchImagesMixin

```ts
withMatchImagesMixin(matchImages)
```

"MatchImages is a list of image matching rules that should be satisfied."

**Note:** This function appends passed data to existing values

## obj spec.matchImages

"MatchImages is a list of image matching rules that should be satisfied."

### fn spec.matchImages.withPrefix

```ts
withPrefix(prefix)
```

"Prefix is the prefix that should be matched."

### fn spec.matchImages.withType

```ts
withType(type)
```

"Type is the type of match."

## obj spec.registry

"Registry is the configuration for the registry."

## obj spec.registry.authentication

"Authentication is the authentication information for the registry."

## obj spec.registry.authentication.pullSecretRef

"PullSecretRef is a reference to a secret that contains the credentials for\nthe registry."

### fn spec.registry.authentication.pullSecretRef.withName

```ts
withName(name)
```

"Name of the referent.\nThis field is effectively required, but due to backwards compatibility is\nallowed to be empty. Instances of this type with an empty value here are\nalmost certainly wrong.\nMore info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"

## obj spec.verification

"Verification contains the configuration for verifying the image."

### fn spec.verification.withProvider

```ts
withProvider(provider)
```

"Provider is the provider that should be used to verify the image."

## obj spec.verification.cosign

"Cosign is the configuration for verifying the image using cosign."

### fn spec.verification.cosign.withAuthorities

```ts
withAuthorities(authorities)
```

"Authorities defines the rules for discovering and validating signatures."

### fn spec.verification.cosign.withAuthoritiesMixin

```ts
withAuthoritiesMixin(authorities)
```

"Authorities defines the rules for discovering and validating signatures."

**Note:** This function appends passed data to existing values

## obj spec.verification.cosign.authorities

"Authorities defines the rules for discovering and validating signatures."

### fn spec.verification.cosign.authorities.withAttestations

```ts
withAttestations(attestations)
```

"Attestations is a list of individual attestations for this authority,\nonce the signature for this authority has been verified."

### fn spec.verification.cosign.authorities.withAttestationsMixin

```ts
withAttestationsMixin(attestations)
```

"Attestations is a list of individual attestations for this authority,\nonce the signature for this authority has been verified."

**Note:** This function appends passed data to existing values

### fn spec.verification.cosign.authorities.withName

```ts
withName(name)
```

"Name is the name for this authority."

## obj spec.verification.cosign.authorities.attestations

"Attestations is a list of individual attestations for this authority,\nonce the signature for this authority has been verified."

### fn spec.verification.cosign.authorities.attestations.withName

```ts
withName(name)
```

"Name of the attestation."

### fn spec.verification.cosign.authorities.attestations.withPredicateType

```ts
withPredicateType(predicateType)
```

"PredicateType defines which predicate type to verify. Matches cosign\nverify-attestation options."

## obj spec.verification.cosign.authorities.key

"Key defines the type of key to validate the image."

### fn spec.verification.cosign.authorities.key.withHashAlgorithm

```ts
withHashAlgorithm(hashAlgorithm)
```

"HashAlgorithm always defaults to sha256 if the algorithm hasn't been explicitly set"

## obj spec.verification.cosign.authorities.key.secretRef

"SecretRef sets a reference to a secret with the key."

### fn spec.verification.cosign.authorities.key.secretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.verification.cosign.authorities.key.secretRef.withName

```ts
withName(name)
```

"Name of the secret."

## obj spec.verification.cosign.authorities.keyless

"Keyless sets the configuration to verify the authority against a Fulcio\ninstance."

### fn spec.verification.cosign.authorities.keyless.withIdentities

```ts
withIdentities(identities)
```

"Identities sets a list of identities."

### fn spec.verification.cosign.authorities.keyless.withIdentitiesMixin

```ts
withIdentitiesMixin(identities)
```

"Identities sets a list of identities."

**Note:** This function appends passed data to existing values

### fn spec.verification.cosign.authorities.keyless.withInsecureIgnoreSCT

```ts
withInsecureIgnoreSCT(insecureIgnoreSCT)
```

"InsecureIgnoreSCT omits verifying if a certificate contains an embedded SCT"

## obj spec.verification.cosign.authorities.keyless.identities

"Identities sets a list of identities."

### fn spec.verification.cosign.authorities.keyless.identities.withIssuer

```ts
withIssuer(issuer)
```

"Issuer defines the issuer for this identity."

### fn spec.verification.cosign.authorities.keyless.identities.withIssuerRegExp

```ts
withIssuerRegExp(issuerRegExp)
```

"IssuerRegExp specifies a regular expression to match the issuer for this identity.\nThis has precedence over the Issuer field."

### fn spec.verification.cosign.authorities.keyless.identities.withSubject

```ts
withSubject(subject)
```

"Subject defines the subject for this identity."

### fn spec.verification.cosign.authorities.keyless.identities.withSubjectRegExp

```ts
withSubjectRegExp(subjectRegExp)
```

"SubjectRegExp specifies a regular expression to match the subject for this identity.\nThis has precedence over the Subject field."